soluciones/eperez/02-phpmyadmin/phpmyadmin-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-deploy
  namespace: laravel
spec:
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin:5.2.1
        ports:
        - containerPort: 80
