soluciones/eperez/02-phpmyadmin/php-myadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: ingress-phpmyadmin
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
   rules:
   - host: laravel.com
     http:
       paths:
       - path: /phpmyadmin
         pathType: Prefix
         backend:
           service:
             name: phpmyadmin
             port:
               number: 80
